; ModuleID = '/home/carl/AnghaBench/TDengine/src/util/src/extr_shash.c_taosHashStringStep1.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/util/src/extr_shash.c_taosHashStringStep1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local signext i8 @taosHashStringStep1(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_2__*, align 8
  %6 = alloca i8, align 1
  %7 = alloca i8, align 1
  %8 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = bitcast i8* %9 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %10, %struct.TYPE_2__** %5, align 8
  store i8 0, i8* %6, align 1
  %11 = load i8*, i8** %4, align 8
  store i8* %11, i8** %8, align 8
  br label %12

12:                                               ; preds = %16, %2
  %13 = load i8*, i8** %8, align 8
  %14 = load i8, i8* %13, align 1
  %15 = icmp ne i8 %14, 0
  br i1 %15, label %16, label %26

16:                                               ; preds = %12
  %17 = load i8*, i8** %8, align 8
  %18 = load i8, i8* %17, align 1
  %19 = sext i8 %18 to i32
  %20 = load i8, i8* %6, align 1
  %21 = sext i8 %20 to i32
  %22 = add nsw i32 %21, %19
  %23 = trunc i32 %22 to i8
  store i8 %23, i8* %6, align 1
  %24 = load i8*, i8** %8, align 8
  %25 = getelementptr inbounds i8, i8* %24, i32 1
  store i8* %25, i8** %8, align 8
  br label %12

26:                                               ; preds = %12
  %27 = load i8, i8* %6, align 1
  %28 = sext i8 %27 to i32
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i8, i8* %30, align 1
  %32 = sext i8 %31 to i32
  %33 = sdiv i32 %28, %32
  %34 = trunc i32 %33 to i8
  store i8 %34, i8* %7, align 1
  %35 = load i8, i8* %7, align 1
  %36 = sext i8 %35 to i32
  %37 = load i8, i8* %6, align 1
  %38 = sext i8 %37 to i32
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 0
  %41 = load i8, i8* %40, align 1
  %42 = sext i8 %41 to i32
  %43 = srem i32 %38, %42
  %44 = add nsw i32 %36, %43
  %45 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %46 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %45, i32 0, i32 0
  %47 = load i8, i8* %46, align 1
  %48 = sext i8 %47 to i32
  %49 = srem i32 %44, %48
  %50 = trunc i32 %49 to i8
  store i8 %50, i8* %6, align 1
  %51 = load i8, i8* %6, align 1
  ret i8 %51
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
